--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="all-ft">
 
         <div class="main-foot">
-
+             <!-- <img src="/img/footer.png" alt=""> -->
             <div class="mylog">
                 <h1>My LOG <br>TRAVELS</h1>
             </div>
