--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>My Travel Logs</title>
 </head>
 <body>
+    <!-- navbar -->
     <header>
         <nav class="navbar">
             <ul class="navbar-left">
