--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="about.html">About</a></li>
             </ul>
             <button class="navbar-right" type="button">
-                <a class="navbar-right-text" href="#">Contact Us</a>
+                <a class="navbar-right-text" href="#contact">Contact Us</a>
             </button>
         </nav>
     </header>
@@ -117,7 +117,7 @@
 </div>
 
 
-<div class="contact">
+<div class="contact" id="contact">
     <form class="contact-form" action="" method="get" class="form-example">
         <h1>Be Updated!</h1>
         <input class="form-elements" type="text" name="name" placeholder="First Name *" required>
