--- a/flight.html
+++ b/flight.html
@@ -42,7 +42,7 @@
         <div class="first">
             <h1>Flight 1</h1>
             <br>
-            <img src="img/360_F_535473874_OWCa2ohzXXNZgqnlzF9QETsnbrSO9pFS.jpg" alt="" srcset="" class="first_h">
+            <img src="img/Hollywood_Sign.jpg" alt="" srcset="" class="first_h">
             <br>
             <h5>12-18</h5>
             <h4>Flight To Paris</h4>
@@ -57,7 +57,7 @@
         <div class="first">
             <h1>Flight 2</h1>
             <br>
-            <img src="img/360_F_535473874_OWCa2ohzXXNZgqnlzF9QETsnbrSO9pFS.jpg" alt="" srcset="" class="first_h">
+            <img src="img/image (1).jpg" alt="" srcset="" class="first_h">
             <br>
             <h5>12-18</h5>
             <h4>Flight To Paris</h4>
@@ -72,7 +72,7 @@
         <div class="first">
             <h1>Flight 3</h1>
             <br>
-            <img src="img/360_F_535473874_OWCa2ohzXXNZgqnlzF9QETsnbrSO9pFS.jpg" alt="" srcset="" class="first_h">
+            <img src="img/image.jpg" alt="" srcset="" class="first_h">
             <br>
             <h5>12-18</h5>
             <h4>Flight To Paris</h4>
